@@ -69,6 +69,8 @@ Other changes:
 * Allow file attribute of <move> to rename a directory.
   Bugzilla Report 22863.
 
+* Add xmlcatalog nested element to XmlProperty. Bugzilla report 27053.
+
 Fixed bugs:
 -----------
 
